# kcuda

./: .gitignore  PUBLISHING.md  README.md  SESSION_HANDOFF.md  pyproject.toml
.github/: SESSION_HANDOFF.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
.specify/memory/: constitution.md
specs/001-cuda-llm-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cuda-llm-validation/checklists/: requirements.md
specs/001-cuda-llm-validation/contracts/: cli.md
src/kcuda_validate/: __main__.py
src/kcuda_validate/cli/: detect.py  infer.py  load.py  validate_all.py
src/kcuda_validate/lib/: formatters.py  logger.py  metrics.py  validators.py
src/kcuda_validate/models/: gpu_device.py  inference_result.py  llm_model.py
src/kcuda_validate/services/: gpu_detector.py  inferencer.py  model_loader.py
tests/: conftest.py
tests/contract/: test_cli_interface.py
tests/integration/: test_full_pipeline.py  test_gpu_detection.py  test_model_lifecycle.py
tests/unit/: test_gpu_detector.py  test_gpu_device.py  test_inference_result.py  test_inferencer.py  test_llm_model.py  test_model_loader.py
