[project]
name = "kcuda-validate"
version = "0.1.0"
description = "CUDA LLM Hardware Validation Tool for WSL2"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "kcuda", email = "kcuda@example.com" }
]
keywords = ["cuda", "llm", "validation", "wsl2", "gpu", "nvidia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.1.0",
    "llama-cpp-python>=0.2.0",
    "nvidia-ml-py>=12.535.0",  # pynvml
    "huggingface-hub>=0.19.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
]

[project.scripts]
kcuda-validate = "kcuda_validate.__main__:main"

[project.urls]
Homepage = "https://github.com/kcuda/kcuda-validate"
Documentation = "https://github.com/kcuda/kcuda-validate/blob/main/specs/001-cuda-llm-validation/quickstart.md"
Repository = "https://github.com/kcuda/kcuda-validate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src/kcuda_validate",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "contract: Contract tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
